Add encryptionAlgo, dataToSign base64, fix digest algo