@@ -13,20 +13,27 @@
  */
 package lu.nowina.nexu.api;
 
-import java.util.Base64;
+import javax.xml.bind.DatatypeConverter;
 
+import eu.europa.esig.dss.EncryptionAlgorithm;
 import eu.europa.esig.dss.SignatureValue;
 
 public class SignatureResponse {
-	
+
+	private EncryptionAlgorithm encryptionAlgorithm;
 	private String signatureValue;
-	
+
 	public SignatureResponse(SignatureValue value) {
-		this.signatureValue = new String(Base64.getEncoder().encode(value.getValue()));
+		this.signatureValue = new String(DatatypeConverter.printBase64Binary(value.getValue()));
+		this.encryptionAlgorithm = value.getAlgorithm().getEncryptionAlgorithm();
 	}
-	
-	public String getValue() {
+
+	public String getSignatureValue() {
 		return signatureValue;
+	}
+
+	public EncryptionAlgorithm getEncryptionAlgorithm() {
+		return encryptionAlgorithm;
 	}
 
 }
